--- a/web2-week5-responsive-master/index.html
+++ b/web2-week5-responsive-master/index.html
@@ -18,12 +18,29 @@
 
     <main>
         <header>
-            <nav>
+<section>
+    <button id="burger-icon">
+        <i class="fas fa-bars">
+    </button>
+</section>
+
+<section>
+    <a href="#">Survival Guide</a>
+</section>
+
+<nav data-nav="main-navigation">
+    <ul>
+        <li><a href="#history">History</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#gallery">Skynet</a></li>
+    </ul>
+</nav>
+            <!-- <nav>
                 <i class="fas fa-bars"></i>
             </nav>
             <aside>
                 <a href="#">Survival Guide</a>
-            </aside>
+            </aside> -->
         </header>
 
         <section id="hero"></section>
