Header Structure Push

--- a/web2-week5-responsive-master/index.html
+++ b/web2-week5-responsive-master/index.html
@@ -20,12 +20,12 @@
         <header>
 <section>
     <button id="burger-icon">
-        <i class="fas fa-bars">
+        <i class="fas fa-bars"></i>
     </button>
 </section>
 
 <section>
-    <a href="#">Survival Guide</a>
+    <a href="#"><i class="fas fa-shopping-cart"></i><span>Survival Guide</span></a>
 </section>
 
 <nav data-nav="main-navigation">
