Nasty nav dropped

--- a/web2-week5-responsive-master/index.html
+++ b/web2-week5-responsive-master/index.html
@@ -35,14 +35,23 @@
         </div>
     </section>
 
+    <header data-fixed="fixed-item">
+    <div>
+        <!-- burger icon -->
+        <section id="burger-icon" >
+            <i class="fas fa-bars"></i>
+        </section>
+    </div>
+</header>
+
     <main>
-        <header>
+        <!-- <header>
             <nav>
                 <i class="fas fa-bars"></i>
             </nav>
             <aside>
                 <a href="#">Survival Guide</a>
-            </aside>
+            </aside> -->
         </header>
 
         <section id="hero"></section>
