--- a/web2-week5-responsive-master/index.html
+++ b/web2-week5-responsive-master/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Your options for data-navigation-position is: left | right -->
     <!-- Your options for data-navigation-slide is: over | under | push -->
-    <section id="off-canvas-container" data-navigation-position="right" data-navigation-slide="push">
+    <section id="off-canvas-container" data-navigation-position="left" data-navigation-slide="over">
         <div>
             <button>
                 <i class="far fa-times-circle" id="close-btn"></i>
@@ -36,13 +36,18 @@
     </section>
 
     <header data-fixed="fixed-item">
-    <div>
-        <!-- burger icon -->
-        <section id="burger-icon" >
-            <i class="fas fa-bars"></i>
-        </section>
-    </div>
-</header>
+        <!-- <div> -->
+            <!-- burger icon -->
+
+            <section id="burger-icon">
+                <i class="fas fa-bars"></i>
+            </section>
+            
+            <aside>
+                <a href="#">Survival Guide</a>
+            </aside>
+        <!-- </div> -->
+    </header>
 
     <main>
         <!-- <header>
@@ -52,7 +57,10 @@
             <aside>
                 <a href="#">Survival Guide</a>
             </aside> -->
-        </header>
+        <!-- </header> -->
+        <!-- overlay for the view when the menu is visible. Please don't move -->
+        <div class="js-off-canvas-overlay" id="overlay"></div>
+        <!-- overlay for the view when the menu is visible. Please don't move -->
 
         <section id="hero"></section>
 
